# cudaMMC

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  config.ini  cuMMC_tester.py  extract_singletons.sh  main.cpp  makefile  xyz.py  xyz2pdb.cpp
benchmark/: README.md  benchmark_modelling_methods.py  cudaMMC_benchmark_analysis.ipynb  requirements.txt
example_data/: README.md  convert_hcm2cif.py  example_anchors_with_motif_orientation.bed  example_cluster_interactions.bedpe  example_segment_split.txt  example_singleton_interactions.bedpe  hg19.avoid.regions.bed  set_paths_in_config.py  stg_gpu_example_config.ini
include/: Anchor.h  BedRegion.h  BedRegions.h  Chromosome.h  ChromosomesSet.h  Cluster.h  Density.h  Heatmap.h  HierarchicalChromosome.h  InteractionArc.h  InteractionArcs.h  LooperSolver.h  Settings.h
src/: Anchor.cpp  BedRegion.cpp  BedRegions.cpp  Chromosome.cpp  ChromosomesSet.cpp  Cluster.cpp  Density.cpp  Heatmap.cpp  HierarchicalChromosome.cu  InteractionArc.cpp  InteractionArcs.cpp  LooperSolver.cpp  ParallelMarkArcs.cu  ParallelMonteCarloHeatmap.cu  Settings.cpp  main.cpp
src/lib/: INIReader.cpp  common.cpp  ini.c  ini.h
